    two known ROMs in existence, so the detection probably isn't robust).

  * Tweaked bankswitch autodetection for the 0840, F8 and FE schemes;
    several homebrews that didn't run before now work correctly.

  * Fixed regression in RIOT INTIM reads; at least one known ROM
    (Mr. Roboto Berzerk hack) wasn't working properly.

  * Updated included PNG and ZLIB libraries to latest stable version.

-Have fun!


3.7.4 to 3.7.5: (December 22, 2012)

  * Improved regressions in PAL format autodetection, introduced in the
    past several releases.

  * Fixed crash when loading invalid PNG files in ROM browser.

  * Snapshots generated by Stella now include more informative info, such
    as the build number, platform architecture, TV effects in use, etc.


3.7.3 to 3.7.4: (October 31, 2012)

  * Fixed screen blanking regression in 'Video Chess', and improved
    behaviour of ROMs that don't use VSYNC.


3.7.2 to 3.7.3: (October 26, 2012)

  * Note: because of TIA/RIOT changes, the state file format has changed
          again, and old state files will not work with this release.

  * Improved handling of 'illegal' VSYNC signals, which sometimes created
    'short' frames that caused massive flickering.  Also improved
    related behaviour when VSYNC isn't used at all.

  * Improved sound generation with ROMs that have irregular scanline
    counts.  This fixes many demo ROMs as well as Quadrun, where
    previously there would be 'gaps' in the sound output.

  * Improved emulation of RIOT chip, in particular the behaviour of
    reading from TIMINT.  Also, D6 of the Interrupt Flag register is now
    properly set on active transition of the PA7 pin.

  * Fixed bug in DPC+ bankswitch scheme; the music in several ROMS wasn't
    playing correctly.

  * The ROM properties database now uses 'Auto' instead of 'Auto-select'
    everywhere.  This makes for less typing when running from the
    commandline.

  * Updated included PNG library to latest stable version.

