@@ -2101,8 +2101,13 @@
     </tr>
 
     <tr>
-      <td><pre>-snapdir &lt;path&gt;</pre></td>
+      <td><pre>-snapsavedir &lt;path&gt;</pre></td>
       <td>The directory to save snapshot files to.</td>
+    </tr>
+
+    <tr>
+      <td><pre>-snaploaddir &lt;path&gt;</pre></td>
+      <td>The directory to load snapshot files from.</td>
     </tr>
 
     <tr>
@@ -2552,7 +2557,8 @@
         <table border="1" cellpadding="4">
           <tr><th>Item</th><th>Brief description</th><th>For more information,<br>see <a href="#CommandLine">CommandLine</a></th></tr>
           <tr><td>Rom path</td><td>specifies location of ROM files</td><td>-romdir</td></tr>
-          <tr><td>Snapshot path</td><td>specifies where to load/save snapshots</td><td>-snapdir</td></tr>
+          <tr><td>Snapshot save path</td><td>specifies where to save snapshots</td><td>-snapsavedir</td></tr>
+          <tr><td>Snapshot load path</td><td>specifies where to load snapshots</td><td>-snaploaddir</td></tr>
           <tr><td>Cheat file</td><td>specifies location of cheatfile database</td><td>-cheatfile</td></tr>
           <tr><td>Palette file</td><td>specifies location of user palette</td><td>-palettefile</td></tr>
           <tr><td>Properties file </td><td>specifies location of external stella.pro database</td><td>-propsfile</td></tr>
